--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,6 @@
 [postgres]
 url = "postgresql://neondb_owner:npg_tLhjx24gqVRD@ep-wild-field-a1vwbxil-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
+
+[admin]
+username = "admin"
+password = "password123"
